# my-fi

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.sh
app/: __init__.py  main.py
app/api/: router.py
app/api/routes/: __init__.py  imports.py  system.py  transactions.py  ui.py
app/core/: config.py  logging.py  openapi.py  runtime.py
app/db/: __init__.py  canonical_transactions.py  database.py  raw_rows.py  source_files.py  validation_reports.py
app/models/: __init__.py  imports.py  ledger.py  parsing.py  system.py  validation.py
app/parsers/: __init__.py  base.py  federal.py  hdfc.py  kotak.py  registry.py
app/services/: duplicates.py  imports.py  normalization.py  validation.py
app/web/static/: api-client.js  components.js  index.html  main.js  state.js  styles.css
docs/: CODING_STANDARDS.md  PRD_version_1.md  implementation_plan_v1.md
samples/: federal_sample.csv  hdfc_sample.csv  kotak_sample.csv
tests/: conftest.py  factories.py
tests/api/: test_frontend_assets.py  test_import_error_paths.py  test_imports.py  test_system.py  test_transactions.py
tests/db/: test_repositories.py
tests/models/: test_response_models.py
tests/services/: test_duplicates.py  test_import_service.py  test_normalization.py  test_parsers.py  test_validation.py
