[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-fi"
version = "0.1.0"
description = "Local-first personal banking ingestion engine."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.115.12,<1.0.0",
  "pydantic-settings>=2.9.1,<3.0.0",
  "uvicorn>=0.34.1,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "mypy>=1.15.0,<2.0.0",
  "pytest>=8.3.5,<9.0.0",
  "pytest-cov>=6.1.1,<7.0.0",
  "ruff>=0.11.5,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=85"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
strict_equality = true
pretty = true
show_error_codes = true
